[package]
name = "fuzz-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
schemars = { version = "0.8.15", features = ["chrono"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
